# securities-data-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  prefect.cloud.yaml  prefect.local.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
docker/: Dockerfile  op-compose.yml  pipeline-compose.yml
docker/dev/: compose.yml
docker/pg-entrypoint-initdb.d/: init-db.sh
docker/pipeline/: Dockerfile  compose.yml
docker/prod/: compose.yml
docker/prod/prefect_job_templates/: docker-template.json
dw_transformer/: dbt_project.yml  profiles.yml
dw_transformer/macros/: ffill_candles.sql  properties.yml
dw_transformer/models/: properties.yml
dw_transformer/models/core/: dim_symbols.sql  fct_prices.sql
dw_transformer/models/staging/: stg_fx_prices.sql  stg_fx_symbols.sql  stg_stock_prices.sql  stg_stock_symbols.sql
dw_transformer/tests/fixtures/: stg_fx_prices_expected.sql  stg_stock_prices_expected.sql
main/: deploy.py  main.py
pipeline/: config.py  extract.py  load.py  main.py  price_history.py  s3_el.py  symbols.py  transform.py
py_pipeline/: config.py  deploy.py  extract.py  load.py  main.py  orchestration.py  transform.py  validate.py
tests/: conftest.py  e2e_test.py  extract_test.py  load_test.py  test_price_history.py  test_price_history_e2e.py  test_s3_el.py  test_symbols.py  test_symbols_e2e.py  transform_test.py
tests/data/: fx_price_data_update.csv  processed_fx_prices.csv  processed_fx_prices.parquet  processed_fx_prices_update.csv  processed_fx_prices_update.parquet  processed_fx_symbols.csv  processed_fx_symbols.parquet  processed_sp_stocks_prices.csv  processed_sp_stocks_prices.parquet  processed_sp_stocks_prices_update.parquet  processed_sp_stocks_symbols.csv  processed_sp_stocks_symbols.parquet  processed_sp_stocks_symbols_update.csv  processed_sp_stocks_symbols_update.parquet  processed_sp_symbols.csv  raw_fx_prices.csv  raw_sp_stocks_prices.csv  raw_sp_stocks_symbols.csv  raw_sp_symbols.csv  sp_stocks_price_data_update.csv
utils/: s3_el.py
