[project]
name = "securities-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.48",
    "python-dotenv>=1.0.1",
    "duckdb>=1.1.3",
    "s3fs>=2024.10.0",
    "fsspec>=2024.10.0",
    "prefect-client>=3.1.7",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]

[tool.uv.sources]
