[project]
name = "securities-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.60",
    "python-dotenv>=1.0.1",
    "duckdb>=1.1.3",
    "s3fs>=2024.10.0",
    "fsspec>=2024.10.0",
    "prefect-client>=3.1.15",
    "lxml>=6.0.2",
    "dbt-core>=1.10.17",
    "dbt-postgres>=1.9.1",
    "prefect-dbt>=0.7.13",
    "psycopg2-binary>=2.9.11",
    "prefect-aws>=0.7.4",
    "prefect-sqlalchemy>=0.5.3",
    "pyarrow>=23.0.0",
]

[project.scripts]
run-pipeline = "py_pipeline.main:main"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "minio>=7.2.15",
    "pytest>=8.3.4",
    "prefect>=3.1.15",
    "prefect-docker>=0.7.0",
]
package = true

[tool.setuptools]
packages = ["py_pipeline"]
